hard-gists/2428250/run.log
=== Docker Run Log for 2428250 ===
Started at: Mi 29. Okt 13:04:34 CET 2025

[2025-10-29 13:04:34] START: Running container for 2428250
[2025-10-29 13:04:34] SUCCESS: Container ee089c04e36fb207b881f3ea3e105a80471ce49e1658f0049f2e5e8682e1084e started for 2428250
=== Container logs for 2428250 ===
  File "/snippet.py", line 80
    print response.getheader('Location')
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2428250 ===
[2025-10-29 13:04:36] INFO: Container ee089c04e36fb207b881f3ea3e105a80471ce49e1658f0049f2e5e8682e1084e has stopped
